ecmascript/parser/tests/test262-error-references/fail/e98777d7b4c239a8.js.stderr
error: Expected (, got `
 --> $DIR/tests/test262-parser/fail/e98777d7b4c239a8.js:1:8
  |
1 | switch `test`
  |        ^

